welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
	var rep = false

rep = (!aSmile & bSmile) || (aSmile a !bSmile)
return rep
}
